--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   objectbox: ^1.1.1
   objectbox_flutter_libs: any
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
